--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The server for the Pokémon Showdown battle simulator",
   "version": "0.11.2",
   "dependencies": {
+    "dem-feels": "^1.8.1",
     "MD5": "^1.3.0",
     "autolinker": "^1.4.4",
     "concat-stream": "^1.6.0",
