--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "githubhook": "^1.9.1",
     "json-stringify-safe": "^5.0.1",
     "nani": "^1.2.0",
-    "machdb": "^1.0.0",
+    "origindb": "^2.6.1",
     "request": "^2.82.0",
     "sockjs": "0.3.18",
     "uuid": "^2.0.2"
